# silver_claw_project

./: .gitignore  README.md  config.ini
_cython_hand_detection/: Makefile  hand_landmarks_detector.py  main.py
_cython_hand_detection/_hand_tracking_module/: main.py
_cython_hand_detection/src/: main.c
cython_hand_detection/: CMakeCache.txt  README.md
invisible_mouse/: Cargo.toml
invisible_mouse/src/: main.rs
invisible_mouse_installer/: Cargo.toml
invisible_mouse_installer/src/: main.rs
python_hand_detection/: Makefile  hand_landmarks_detector.py  main.c  main.py  main.pyx  not_working_face_detection.py  setup.py
python_hand_detection/_hand_tracking_module/: hand_detector.py
silver_claw/: Cargo.toml
silver_claw/src/_libs/: circular_buffer.rs  hand_detector.rs  libs.rs
silver_claw/src/debug_version/: main.rs
silver_claw/src/installer/: main.rs
silver_claw_rust/: Cargo.toml  Makefile  config.yaml
silver_claw_rust/src/_libs/: hand_detector.rs  taskbar.rs
silver_claw_rust/src/_libs/hand_detector/: calibration.rs  circular_buffer.rs
silver_claw_rust/src/debug_version/: main.rs
silver_claw_rust/src/installer/: main.rs
silver_claw_rust/src/service/: main.rs
silver_claw_rust/src/unbugged_version/: main.rs
silver_claw_rust/src/unit_tests/: main.rs
silver_claw_rust/src/unit_tests/circular_buffer_test_suite/: mod.rs
test_python_rust/: Cargo.toml  Makefile
test_python_rust/src/: main.rs
test_python_rust/src/circular_buffer/: mod.rs
test_python_rust/src/hand_detector/: geometry.rs  mod.rs
test_python_rust/src/taskbar/: mod.rs
(+1 files in other folders)
