[package]
name = "silver_claw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "silver_claw_service"
path = "src/service/main.rs"

[[bin]]
name = "silver_claw_installer"
path = "src/installer/main.rs"

[[bin]]
name = "silver_claw_debug_version"
path = "src/debug_version/main.rs"

[[bin]]
name = "silver_claw_unit_tests"
path = "src/unit_tests/main.rs"

[lib]
name = "silver_claw_lib"
path = "src/_libs/libs.rs"

[dependencies]
windows-service = "0.4.0"
anyhow = "1.0"
pyo3 = "0.16.5"
libmath = "0.2.1"
enigo = "0.0.14"
tray-item = "0.7.0"
winapi={version = "0.3.9", features = ["winuser", "wincon", "shellapi"]}