[package]
name = "test_python_rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
libmath = "0.2.1"
enigo = "0.0.14"
winapi={version = "0.3.9", features = ["winuser", "wincon", "shellapi"]}

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]